# Analysis_StatModels

./: .venv  README.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Statsmodel.ipynb
