[tool.poetry]
name = "Analysis_StatModels"
version = "0.0.1"
description = ""
authors = ["Preethi Prakash <preethi93@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
statsmodels = "^0.14.2"
pandas = "^2.2.2"
ipykernel = "^6.29.4"

